--- a/assets/styles.css
+++ b/assets/styles.css
@@ -66,7 +66,7 @@ body {
 .hero-section {
     flex: 1.5;
     /* Takes 1.5x space (more than links) */
-    background: #49080866;
+    background: #1a781d;
     /* Change background color */
     padding: 60px 50px;
     /* Change padding: top/bottom left/right */
